# TransitOps

./: .gitignore  Readme.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py  deps.py  security.py
backend/app/models/: __init__.py  driver.py  expense.py  fuel_log.py  maintenance.py  system_settings.py  trip.py  user.py  vehicle.py
backend/app/routers/: auth.py  dashboard.py  driver.py  expense.py  fuel_log.py  maintenance.py  system_settings.py  trip.py  vehicle.py
backend/app/schemas/: auth.py  dashboard.py  driver.py  expense.py  fuel_log.py  maintenance.py  system_settings.py  trip.py  vehicle.py
backend/app/services/: auth_sevice.py  dashboard_service.py  driver_service.py  expense_service.py  fuel_log_service.py  maintenance_service.py  system_settings_service.py  trip_service.py  vehicle_service.py
backend/app/utils/: constants.py  enums.py  exceptions.py
backend/migrations/: env.py
backend/migrations/versions/: 047b24ec432e_initial.py  12f33b9b13a2_create_expenses_table.py  6f6188035294_create_users_table.py  81a24f862594_create_trips_table.py  8ca1191b0264_create_system_settings_table.py  dea772fc3732_create_fuel_logs.py  ec63fa0b91d0_add_vehicles_and_drivers.py  f4d6b73d87ba_create_maintenance_logs.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/routes/: ProtectedRoute.jsx
frontend/src/services/: api.js  authApi.js  dashboardApi.js  driverApi.js  expenseApi.js  maintenanceApi.js  settingsApi.js  (+2 more)
(+20 files in other folders)
