[project]
name = "fastapi-backend"
version = "0.1.0"
description = "TransitOps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.0",
    "email-validator>=2.3.0",
    "psycopg[binary]>=3.2.9",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "alembic>=1.18.5",
    "sqlalchemy>=2.0.51",
    "python-multipart>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
